--- a/responsive_layout_v3/index.html
+++ b/responsive_layout_v3/index.html
@@ -16,6 +16,7 @@
 <body>
     <!-- header -->
     <header id="top" class="clearfix">
+    <section class="nav">
         <h1>Feroj Khapangi</h1>
         <nav>
             <ul class="navlinks">
@@ -25,12 +26,13 @@
                 <li><a href="#skills">skills</a></li>
             </ul>
         </nav>
+    </section>
         <section class="me">
             <article>
                 <div class="background">
                     <img src="images/profile-pic (2).jpg" alt="">
                 </div>
-                <p>
+                <p id="shortbio">
                     Hi! I'm a front end developer who loves responsive
                     design and css. I recently finished a degree in front-end web development
                     at Treehouse and am excited to put all my skills to use.
@@ -42,7 +44,7 @@
     <main class="clearfix" id="portfolio">
         <section class="portfolios">
                 <h2>portfolio</h2>
-            <article class="portfolio-1">
+            <article class="portfolio-1 clearfix">
                 <img src="images/portfolio-1.png" alt="Marketing page">
                 <h3>Marketing Page</h3>
                 <p>This project shows the front page of a
@@ -51,7 +53,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-2">
+            <article class="portfolio-2 clearfix">
                 <img src="images/portfolio-2.png" alt="search page">
                 <h3>Search Page</h3>
                 <p>
@@ -60,7 +62,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-3">
+            <article class="portfolio-3 clearfix">
                 <img src="images/portfolio-3.png" alt="travel app image">
                 <h3>Travel App</h3>
                 <p>
@@ -69,7 +71,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-4">
+            <article class="portfolio-4 clearfix">
                 <img src="images/portfolio-4.png" alt="Map of favorite sports">
                 <h3>Map Of Favorite Sports</h3>
                 <p>
@@ -78,7 +80,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-5">
+            <article class="portfolio-5 clearfix">
                 <img src="images/portfolio-5.png" alt="Photo gallery">
                 <h3>Photo gallery</h3>
                 <p>
@@ -88,7 +90,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-6">
+            <article class="portfolio-6 clearfix">
                 <img src="images/portfolio-6.png" alt="calculator">
                 <h3>Calculator</h3>
                 <p>
@@ -98,10 +100,10 @@
             </article>
         </section>
 
-        <hr>
+        <hr id="hide">
 
-        <section class="talent" id="skills">
-            <article>
+        <section class="talent clearfix" id="skills">
+            <article class="clearfix">
                 <h3>Skills</h3>
                 <p>My skills include:</p>
                 <ul>
@@ -113,24 +115,13 @@
             </article>
         </section>
 
-        <hr>
+        <hr class="clearfix">
     </main>
 
         <!-- footer -->
 
         <footer class="clearfix" id="contact">
-            <section class="bottomnav gone">
-                <h3>Feroj Khapangi</h3>
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            </section>
-
-            <section class="contact">
+            <section class="contact clearfix">
                 <h3>Contact</h3>
                 <p>If you're interested in chatting or want more information
                     about what i've been working on, I'd love to hear from you.
@@ -140,11 +131,22 @@
                 <p><strong>Email: </strong><a href="mailto:sendmeemail@yahoo.com">sendmeemail@yahoo.com</a></p>
             </section>
 
-            <hr>
+            <hr class="clearfix">
 
-            <section class="mobilenav">
+            <section class="mobilenav clearfix">
                 <h3>Feroj Khapangi</h3>
                 <p><a href="#top">Back to top</a></p>
+            </section>
+
+            <section class="bottomnav gone">
+                <h3>Feroj Khapangi</h3>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
             </section>
         </footer>
     </main>
