finishing up with mobile

--- a/responsive_layout_v3/index.html
+++ b/responsive_layout_v3/index.html
@@ -22,8 +22,8 @@
             <ul class="navlinks">
                 <li><a href="#">home</a></li>
                 <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#contact">contact</a></li>
-                <li><a href="#skills">skills</a></li>
+                <li><a href="#skill">contact</a></li>
+                <li><a href="#skill">Skills</a></li>
             </ul>
         </nav>
     </section>
@@ -44,7 +44,7 @@
     <main class="clearfix" id="portfolio">
         <section class="portfolios">
                 <h2>portfolio</h2>
-            <article class="portfolio-1 clearfix">
+            <article class="portfolio-1">
                 <img src="images/portfolio-1.png" alt="Marketing page">
                 <h3>Marketing Page</h3>
                 <p>This project shows the front page of a
@@ -53,7 +53,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-2 clearfix">
+            <article class="portfolio-2">
                 <img src="images/portfolio-2.png" alt="search page">
                 <h3>Search Page</h3>
                 <p>
@@ -62,7 +62,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-3 clearfix">
+            <article class="portfolio-3">
                 <img src="images/portfolio-3.png" alt="travel app image">
                 <h3>Travel App</h3>
                 <p>
@@ -71,7 +71,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-4 clearfix">
+            <article class="portfolio-4">
                 <img src="images/portfolio-4.png" alt="Map of favorite sports">
                 <h3>Map Of Favorite Sports</h3>
                 <p>
@@ -80,7 +80,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-5 clearfix">
+            <article class="portfolio-5">
                 <img src="images/portfolio-5.png" alt="Photo gallery">
                 <h3>Photo gallery</h3>
                 <p>
@@ -90,7 +90,7 @@
                 </p>
             </article>
 
-            <article class="portfolio-6 clearfix">
+            <article class="portfolio-6 ">
                 <img src="images/portfolio-6.png" alt="calculator">
                 <h3>Calculator</h3>
                 <p>
@@ -100,10 +100,10 @@
             </article>
         </section>
 
-        <hr id="hide">
+        <!-- <hr id="hide"> -->
 
-        <section class="talent clearfix" id="skills">
-            <article class="clearfix">
+        <section class="talent">
+            <aside id="skill">
                 <h3>Skills</h3>
                 <p>My skills include:</p>
                 <ul>
@@ -112,7 +112,7 @@
                     <li>JAVASCRIPT</li>
                     <li>BASKETBALL</li>
                 </ul>
-            </article>
+            </aside>
         </section>
 
         <hr class="clearfix">
