reviewing code and final push

--- a/responsive_layout_v3/index.html
+++ b/responsive_layout_v3/index.html
@@ -20,9 +20,9 @@
         <h1>Feroj Khapangi</h1>
         <nav>
             <ul class="navlinks">
-                <li><a href="#">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#portfolio">portfolio</a></li>
-                <li><a href="#skill">contact</a></li>
+                <li><a href="#contact">contact</a></li>
                 <li><a href="#skill">Skills</a></li>
             </ul>
         </nav>
@@ -30,7 +30,7 @@
         <section class="me">
             <article>
                 <div class="background">
-                    <img src="images/profile-pic (2).jpg" alt="">
+                    <img src="images/profile-pic (2).jpg" alt="pic of doggy found on internet">
                 </div>
                 <p id="shortbio">
                     Hi! I'm a front end developer who loves responsive
@@ -40,10 +40,12 @@
             </article>
         </section>
     </header>
+
     <!-- portfolio -->
+
     <main class="clearfix" id="portfolio">
-        <section class="portfolios">
-                <h2>portfolio</h2>
+        <section class="portfolios clearfix">
+            <h2>portfolio</h2>
             <article class="portfolio-1">
                 <img src="images/portfolio-1.png" alt="Marketing page">
                 <h3>Marketing Page</h3>
@@ -102,6 +104,8 @@
 
         <!-- <hr id="hide"> -->
 
+        <!-- skills -->
+
         <section class="talent">
             <aside id="skill">
                 <h3>Skills</h3>
@@ -121,6 +125,7 @@
         <!-- footer -->
 
         <footer class="clearfix" id="contact">
+            <!-- contact information -->
             <section class="contact clearfix">
                 <h3>Contact</h3>
                 <p>If you're interested in chatting or want more information
@@ -133,24 +138,25 @@
 
             <hr class="clearfix">
 
+            <!-- mobile bottom nav -->
+
             <section class="mobilenav clearfix">
                 <h3>Feroj Khapangi</h3>
                 <p><a href="#top">Back to top</a></p>
             </section>
 
+            <!-- tablet and desktop bottom nav -->
             <section class="bottomnav gone">
                 <h3>Feroj Khapangi</h3>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             </section>
         </footer>
-    </main>
-
 </body>
 
 </html>
